# tauri-bun-vite

./: .env.dev  .env.prod  .env.test  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .env  .gitignore  Cargo.toml  log.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: endpoints.rs  mod.rs
src-tauri/src/core/: mod.rs  system_tray.rs  window_menu.rs
src-tauri/src/entity/: mod.rs  prelude.rs  xxl_job_user.rs
src-tauri/tests/: axum_tests.rs
src/api/: auth.ts  user.ts
src/assets/music/不凡/: 少年不凡 - 刘美麟.lrc
src/assets/music/凡人/: 凡人 - 段奥娟.lrc
src/assets/music/归期/: 归期 - 钱润玉.lrc
src/components/svg-icon/: svg-icon.vue
src/directives/: index.ts
src/directives/auth/: authDirective.ts
src/hooks/: useMessage.ts  useTagsView.ts
src/layouts/: layout-index.vue
src/layouts/aside/: aside-logo.vue  aside-menu.vue  layout-aside.vue
src/layouts/footer/: layout-footer.vue
src/layouts/header/: layout-header.vue
src/layouts/header/bottom/: tag-view-bar.vue  tag-view.vue
src/layouts/header/top/left/: bread-crumb.vue
src/layouts/main/: layout-main.vue
src/locales/: index.ts
src/locales/lang/: en-US.ts  zh-CN.ts
src/plugins/: PluginInterface.ts  PluginManager.ts
src/plugins/plugin/: ElementPlusIconPlugin.ts
src/router/: index.ts
src/router/modules/: constant.ts  dynamic.ts
src/stores/: index.ts
src/stores/modules/: footer.ts  header.ts  route.ts  system.ts  tagsView.ts  themeConfig.ts  userInfo.ts
src/styles/: animate.scss  font.scss  layouts.scss  main.scss  reset.scss  theme.scss  variables.scss
src/types/: axios.d.ts  components.d.ts  index.d.ts  pinia.d.ts  shims-vue.d.ts  vite-env.d.ts
src/utils/: permission.ts  request.ts  storage.ts  theme.ts  time.ts  token.ts  validate.ts
src/views/error/: 401.vue  404.vue
src/views/home/: home.vue
src/views/login/: LoginBar.vue  SwitchLogin.vue
src/views/login/glass/: glass-login.vue
src/views/login/normal/: normal-login.vue  normal-register.vue
src/views/user/: user-center.vue  user-info.vue
